@@ -36,6 +36,7 @@ Version CVS HEAD (?)
   * Mac OS X: fixed "recently used" in file dialogs
   * Mac OS X: avoid crash when starting gigedit as an application
     bundle
+  * Mac OS X: try to launch the GUI on the process's "main" thread
 
 Version 0.2.0 (2009-07-31)
 
